--- a/doc/dokumentacja/spi.tex
+++ b/doc/dokumentacja/spi.tex
@@ -413,7 +413,7 @@ System wykorzystuje magistralę SPI z interfejsem SSP1 do komunikacji z wyświet
     \item Konfiguracja ustawień magistrali.
     \item Włączenie zasilania SSP1 (ustawienie 10. bitu PCONP)
     \item Inicjalizacja rejestrów kontrolnych SSP (CR0 i CR1).
-    \item Ustawienie prędkości taktowania zegara SSP.
+    \item Ustawienie taktowania zegara SSP.
     \item Włączenie magistrali SSP1 ustawiając bit SSE w rejestrze CR1.
 \end{enumerate}
 
