--- a/doc/dokumentacja/oled.tex
+++ b/doc/dokumentacja/oled.tex
@@ -1,6 +1,6 @@
 \subsection{Wyświetlacz OLED}
 
-Do wyświetlania informacji (interfejsu użytkownika) wykorzystano wyświetlacz OLED UG-9664HSWAG01 (oznaczenie na schemacie OLED1). Jest to monochromatyczny wyświetlacz o rozdzielczości 96x64 pikseli, sterowany za pomocą magistrali SPI\ref{spi}. Wyświetlacz ten oparty jest o sterownik SSD1305 (zdolny do obsługiwania rozdzielczości 132x63 pikseli).
+Do wyświetlania informacji (interfejsu użytkownika) wykorzystano wyświetlacz OLED UG-9664HSWAG01 (oznaczenie na schemacie OLED1). Jest to monochromatyczny wyświetlacz o rozdzielczości 96x64 pikseli, sterowany za pomocą magistrali SPI\ref{spi}. Wyświetlacz ten oparty jest o sterownik SSD1305 (zdolny do obsługiwania rozdzielczości 132x64 pikseli).
 
 \subsubsection{Konfiguracja}
 Piny sterujące wyświetlaczem OLED:
@@ -37,22 +37,18 @@ Pamięć wyświetlacza podzielona jest na 8 stron, z których każda odpowiada 1
     \item Obliczany jest adres kolumny x, przy czym należy uwzględnić fakt, że kontroler SSD1305 obsługuje rozdzielczość 132x64 piksele, natomiast fizyczny wyświetlacz posiada tylko 96x64 piksele, co oznacza konieczność stosowania przesunięcia poziomego podczas adresowania kolumn.
     \item Na podstawie współrzędnej y określana jest pozycja bitu (0–7), który odpowiada konkretnej pozycji w bajcie strony, a następnie tworzona jest odpowiednia maska bitowa.
     \item W buforze cieniowania wykonywana jest modyfikacja odpowiedniego bajtu: bit jest ustawiany lub zerowany w zależności od wartości koloru (czarny/biały).
-    \item Ustawiany jest adres w pamięci wyświetlacza (komendy: wybór strony, kolumny niskiej i wysokiej).
+    \item Ustawiany jest adres w pamięci wyświetlacza.
     \item Bajt danych z bufora cieniowania (zaktualizowany) jest przesyłany przez interfejs SPI do pamięci graficznej wyświetlacza tak jak opisano w \ref{przes}.
 \end{enumerate}
 
 \subsubsection{Wyświetlanie pojedynczego znaku}
 \begin{enumerate}
-    \item Z tablicy font5x7 pobierany jest odpowiedni wzorzec bitowy znaku (bitmapa o wysokości 8 linii).
-    \item Dla każdej z 8 linii (wierszy) znaku:
-    \begin{itemize}
-        \item Wczytywany jest bajt danych określający wzorzec piksela w danym wierszu.
+    \item Z tablicy font5x7 pobierany jest odpowiedni wzorzec bitowy znaku.
         \item Iteracja po 6 kolumnach piksela w danej linii:
         \begin{itemize}
             \item Jeśli odpowiedni bit w bajcie danych jest ustawiony — wybierany jest kolor pierwszoplanowy, W przeciwnym razie — kolor tła).
             \item Ustawienie danego piksela zgodnie z kolorem i współrzędnymi \ref{piksel}.
         \end{itemize}
-    \end{itemize}
     \item Po przerysowaniu całej linii znakowej kursor pionowy jest przesuwany w dół o jeden piksel, a poziomy resetowany do początkowej pozycji.
 \end{enumerate}
 
@@ -61,5 +57,5 @@ Pamięć wyświetlacza podzielona jest na 8 stron, z których każda odpowiada 1
 Wyświetlenie ciągu znaków i rysowanie prostokąta realizowane są w oparciu o te same mechanizmy niskopoziomowe, co rysowanie pojedynczego piksela lub znaku. Operacje te są wykonywane sekwencyjnie, poprzez wielokrotne wywołania funkcji ustawiających piksele. Funkcja wyświetlania tekstu przetwarza kolejne znaki jako zestawy pikseli, natomiast rysowanie prostokąta realizowane jest poprzez rysowanie jego krawędzi jako linii poziomych i pionowych.
 
 \subsubsection{Czyszczenie ekranu}
-Czyszczenie ekranu polega na ustawieniu wszystkich strony (od 0xB0 do 0xB7) i wysyłaniu do każdej po 132 bajty zer (lub wartości 0xFF), w celu wyczyszczenia zawartości.
+Czyszczenie ekranu polega na ustawieniu wszystkich stron (od 0xB0 do 0xB7) i wysyłaniu do każdej po 132 bajty zer (lub wartości 0xFF), w celu wyczyszczenia zawartości.
 
