--- a/doc/dokumentacja/pwm.tex
+++ b/doc/dokumentacja/pwm.tex
@@ -90,6 +90,7 @@ W projekcie został wykorzystany PWM1.
                 \centering
                 \begin{tabular}{|c|p{13cm}|}
                     \hline
+                    \rowcolor{gray!30}
                     Wartość & Opis\\
                     \hline
                     00  & Timer mode: Timer Counter (TC) wykorzystuje Prescale Counter (PC) oraz Prescale Register (PR), aby móc działać wolniej. TC inkrementuje się gdy PC = PR\\
