--- a/doc/dokumentacja/spi.tex
+++ b/doc/dokumentacja/spi.tex
@@ -17,6 +17,7 @@ System wykorzystuje magistralę SPI z interfejsem SSP1 do komunikacji z wyświet
 \renewcommand{\arraystretch}{1.2}
 \begin{tabular}{|c|c|p{9.5cm}|}
 \hline
+\rowcolor{gray!30}
 \textbf{Bity} & \textbf{Symbol} & \textbf{Opis} \\
 \hline
 0–1     & —            & Zarezerwowane. \\
